@@ -1,9 +1,9 @@
 #------------------------------------------------------------------------------
 # Top Level CMakeLists.txt for HepMC
 #  cmake -Dmomentum:STRING=[MEV|GEV] -Dlength:STRING=[MM|CM]
-#        [-DCMAKE_INSTALL_PREFIX=/install/path] 
+#        [-DCMAKE_INSTALL_PREFIX=/install/path]
 #        [-DCMAKE_BUILD_TYPE=Debug|Release|RelWithDebInfo|MinSizeRel]
-#        [-Dbuild_docs:BOOL=ON] 
+#        [-Dbuild_docs:BOOL=ON]
 #        /path/to/source
 #  make
 #  make test
@@ -37,20 +37,20 @@ message(STATUS "default momentum and length are ${HEPMC_DEFAULT_MOM_UNIT} ${HEPM
 # find the HepMC cmake modules
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules ${CMAKE_MODULE_PATH})
 
-# make sure we are not building from within the source code directory
-string(COMPARE EQUAL "${CMAKE_SOURCE_DIR}" "${CMAKE_BINARY_DIR}" in_source)
-string( REGEX MATCH "${CMAKE_SOURCE_DIR}/" in_source_subdir
-"${CMAKE_BINARY_DIR}")
-if (in_source OR in_source_subdir)
-  message(FATAL_ERROR "
-ERROR: In source builds of this project are not allowed.
-A separate build directory is required.
-Please create one and run cmake from the build directory.
-Also note that cmake has just added files to your source code directory.
-We suggest getting a new copy of the source code.
-Otherwise, delete `CMakeCache.txt' and the directory `CMakeFiles'.
-  ")
-endif ()
+# # make sure we are not building from within the source code directory
+# string(COMPARE EQUAL "${CMAKE_SOURCE_DIR}" "${CMAKE_BINARY_DIR}" in_source)
+# string( REGEX MATCH "${CMAKE_SOURCE_DIR}/" in_source_subdir
+# "${CMAKE_BINARY_DIR}")
+# if (in_source OR in_source_subdir)
+#   message(FATAL_ERROR "
+# ERROR: In source builds of this project are not allowed.
+# A separate build directory is required.
+# Please create one and run cmake from the build directory.
+# Also note that cmake has just added files to your source code directory.
+# We suggest getting a new copy of the source code.
+# Otherwise, delete `CMakeCache.txt' and the directory `CMakeFiles'.
+#   ")
+# endif ()
 
 # build_docs is OFF (false) by default
 if ( build_docs )
@@ -75,7 +75,7 @@ include_directories ("${CMAKE_CURRENT_SOURCE_DIR}")
 #build all libraries in a single directory to facilitate testing
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
-# parse the version 
+# parse the version
 hepmc_parse_version()
 message(STATUS "${project} version ${version} parses to ${VERSION_MAJOR} ${VERSION_MINOR} ${VERSION_PATCH} ${VERSION_MICRO}" )
 
@@ -83,13 +83,12 @@ message(STATUS "${project} version ${version} parses to ${VERSION_MAJOR} ${VERSI
 include(CMakeDetermineFortranCompiler)
 hepmc_set_compiler_flags()
 
-add_subdirectory(HepMC) 
-add_subdirectory(src) 
-add_subdirectory(fio) 
-add_subdirectory(test) 
-add_subdirectory(examples) 
+add_subdirectory(HepMC)
+add_subdirectory(src)
+add_subdirectory(fio)
+add_subdirectory(test)
+add_subdirectory(examples)
 add_subdirectory(doc)
 
 # Packaging utility
 include(HepMCUseCpack)
-
