@@ -1,0 +1,16 @@
+// -*- C++ -*-
+//
+// This file is part of HepMC
+// Copyright (C) 2014 The HepMC collaboration (see AUTHORS for details)
+//
+#ifndef HEPMC_HEPMC_H
+#define HEPMC_HEPMC_H
+
+#include "HepMC/Version.h"
+#include "HepMC/HepMCDefs.h"
+
+#include "HepMC/GenEvent.h"
+#include "HepMC/GenParticle.h"
+#include "HepMC/GenVertex.h"
+
+#endif
