@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 // testWeights.cc
-// 
+//
 // garren@fnal.gov, January 2010
 // test WeightContainer
 //////////////////////////////////////////////////////////////////////////
@@ -24,20 +24,20 @@ int main() {
    assert( w[1] == 4.56 );
    assert( w.size() == 2 );
    assert( !w.empty() );
-   
+
    std::vector<double> vec;
    for( int i = 0; i < 15; ++i ) {
        double x = (double)i + 0.14*(double)i;
        vec.push_back( x );
    }
-   double v1 = vec[0];
+   //double v1 = vec[0];
    w = vec;
    assert( w.size() == 15 );
    w.pop_back();
    assert( w.size() == 14 );
 
    // new functionality
-   std::size_t vs = vec.size();
+   // std::size_t vs = vec.size();
    std::string nm = "tau";
    w[nm] = 3.1;
    assert( w.size() == (vs) );
@@ -47,7 +47,7 @@ int main() {
    assert( w[0] == v1 );
    assert( w.size() == (vs+1) );
    assert( w[vs-1] == 3.1 );
-   
+
    const HepMC::WeightContainer wc = w;
    assert( wc[nm] == 3.1 );
    // lookup a nonexistent name
